# dir-tree-cli

./: Cargo.toml  readme.md
ci/: ci.yml
src/: main.rs
