[package]
name = "dir-tree-cli"
description = "command-line tool written in Rust that displays the folder structure of a specified directory in a tree-like format"
version = "0.1.0"
edition = "2021"
authors = ["Aurimar Lopes"]
license = "MIT"
exclude = [".github/*"]

[dependencies]
clap = "4.5.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "dtc"
path = "src/main.rs"
